--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
-    "sass": "^1.77.5"
+    "sass": "^1.77.5",
+    "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
