--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
     "sass": "^1.77.5",
+    "styled-components": "^6.1.11",
     "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
