--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "firebase": "^10.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6",
     "sass": "^1.77.5",
     "styled-components": "^6.1.11",
     "vite-plugin-environment": "^1.1.3"
