--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
