--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^4.0.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
     "react": "^18.2.0",
@@ -22,6 +24,7 @@
     "redux-saga": "^1.3.0",
     "reselect": "^5.1.1",
     "sass": "^1.77.5",
+    "stripe": "^15.12.0",
     "styled-components": "^6.1.11",
     "vite-plugin-environment": "^1.1.3"
   },
