--- a/package.json
+++ b/package.json
@@ -26,11 +26,12 @@
     "sass": "^1.77.5",
     "stripe": "^15.12.0",
     "styled-components": "^6.1.11",
+    "typescript": "^5.5.2",
     "vite-plugin-environment": "^1.1.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.1",
